# 2.pyclass

./: README.md  desafio.py  exercicios.py  pyproject.toml
