[tool.poetry]
name = "2-pyclass"
version = "0.1.0"
description = ""
authors = ["ferruccio_ribeiro <ferruccioribeiro@outlook.com>"]
readme = "README.md"
packages = [{include = "2"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
